<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.learn.cancerapp.ui.articles.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.learn.cancerapp.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.learn.cancerapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>